--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -2,7 +2,8 @@
 body {
     font-family: 'Oregano', cursive;
     background-color: #0A1126;
-    padding: 20px;
+    padding: 0;
+    margin: 0;
     color: #E1E3E3;
 }
 
@@ -10,7 +11,7 @@ nav {
     background-color: #333E61;
     padding: 10px;
     display: flex;
-    align-items: center;
+    align-items: stretch;
 }
 
 .logo-link {
