--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -265,7 +265,7 @@ nav {
     padding-top: 5%;
 }
 .col-md-6 .ottawaC{
-    background-image: url('img/purple1.jpg');
+    background-image: url('img/purple.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -350,7 +350,36 @@ nav {
 .datepicker-dropdown{
     border: 3px solid #5ca793;
 }
+select:disabled {
+    color: #C4A24D; 
+}
 #info{
     align-items: center;
+    padding:3%;
+}
+
+/*galery page*/
+.gallery .row{
+    margin: 5%;
+}
+#photo{
+    margin:7% 3%;
+    padding: 5% 4%;
+    border-color: #70A1E5;
+}
+#options{
+    font-size: 24px;
+    border: 3px solid #70A1E5;
+    text-align: left;
     padding:2%;
+    display: flex;
+  justify-content: space-between;
+}
+#options label{
+    padding:1.5%;
+}
+#options .col-md-3 {
+    flex: 1;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
 }
